Fix contrast errors on form labels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,3 +180,7 @@ div#map {min-height: 360px;}
   font-weight: bold;
 }
 
+
+#form-headers {
+    font-weight: bold;
+}
